@@ -1,22 +1,30 @@
-commit 9155fdea19a0586fde11073cb1f1dd2f58d0b7b8
 Author: Michael Terry <michael.terry@canonical.com>
+Author: Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>
 Date:   Wed Mar 13 14:14:07 2013 +0000
-Subject: Enable running tests during the build.
+Description: Enable running tests during the build.
+ Point to the exact location of Qt5's qmake while building the tests.
+ We still don't have qtchooser available ;)
+Last-Update: 2014-09-19
 
 
 ---
- Makefile |    3 ++-
- 1 file changed, 2 insertions(+), 1 deletion(-)
+ Makefile |    4 +++-
+ 1 file changed, 3 insertions(+), 1 deletion(-)
 
 --- a/Makefile
 +++ b/Makefile
-@@ -72,7 +72,8 @@ uninstall:
+@@ -1,3 +1,4 @@
++DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+ MKDIR  = mkdir -p
+ prefix = /usr
+ bindir = $(prefix)/bin
+@@ -72,7 +73,8 @@ uninstall:
  	;; esac
  
  tests/auto/Makefile: tests/auto/auto.pro
 -	cd tests/auto && qmake -o Makefile auto.pro
-+	cd tests/auto && qmake-qt5 -o Makefile auto.pro
-+	cd tests/auto/qtchooser && qmake-qt5 -o Makefile qtchooser.pro
++	cd tests/auto && /usr/lib/$(DEB_HOST_MULTIARCH)/qt5/bin/qmake -o Makefile auto.pro
++	cd tests/auto/qtchooser && /usr/lib/$(DEB_HOST_MULTIARCH)/qt5/bin/qmake -o Makefile qtchooser.pro
  
  check: tests/auto/Makefile
  	cd src/qtchooser && $(MAKE) check
