@@ -2,6 +2,8 @@ qtchooser (47-gd2b7997-2) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Re enable tests.
+  * Update enable-tests.patch to properly find qt5's qmake, as we don't have
+    qtchooser available yet ;)
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 19 Sep 2014 21:44:18 -0300
 
